--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
+/* * {
+  overflow-x: hidden;
+} */
+
+body {
+  background-color: #0f111a;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+.react-chatbot-kit-user-avatar-container {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-left: 4px;
+  background-color: rgb(55, 107, 126);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+.react-chatbot-kit-chat-message-container {
+  padding: 0 6.5px 10px 17.5px;
+  overflow: scroll;
+  height: 424px;
+}
+
+.time-header {
+  color: black;
+  font-size: 20px;
+  text-align: start;
+}
+
+.time-parent {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.time-div {
+  display: flex;
+  gap: 10px;
+  margin-left: -8px;
+}
+
+.time-section {
+  width: 55px;
+  height: 25px;
+  font-size: 10px;
+  border: 1px solid rgb(55, 107, 126);
+  background-color: white;
+  border-radius: 4px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  color: black;
+  transition: all 300ms ease-out;
+  outline: none;
+}
+
+.time-section:hover {
+  background-color: rgb(55, 107, 126);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.selected {
+  background-color: rgb(55, 107, 126); /* Change this to your desired color */
+  color: #fff; /* Change this to the text color you prefer */
+  /* Add any other styles you want for the selected button */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.courses-div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 15px;
+}
+
+.courses-btn {
+  border-radius: 999px;
+  border-color: rgb(55, 107, 126);
+  padding: 5px;
+  cursor: pointer;
+  outline: none;
+  transition: all 100ms ease-out;
+}
+.courses-btn:hover {
+  background-color: rgb(55, 107, 126);
+  color: white;
+}
+.DatePicker_button__qGviS {
+  background-color: rgb(55, 107, 126);
 }
